--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ main {
 
 img {
   max-width: 95%;
+  object-fit: cover;
 }
 
 nav {
@@ -70,12 +71,11 @@ nav {
 }
 
 .rodape {
-  position: absolute;
+  /* position: absolute; */
   bottom: 0;
   background-color: #fc5c65;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
   box-sizing: border-box;
-  width: 100%;
   text-align: center;
   font: bold 16px sans-serif;
   padding: 20px 20px;
